--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -45,4 +45,8 @@
   .note > textarea::placeholder {
     color: var(--text);
   }
+  .note .delete {
+    @apply shadow-lg;
+    /* background-color: red; */
+  }
 }
