--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,6 +4,7 @@
 * {
   -webkit-tap-highlight-color: transparent;
 }
+
 .main {
   min-height: 100vh;
   min-height: 100dvh;
@@ -14,27 +15,32 @@
 .blue {
   --accent: #55cffa;
   --text: #275f72;
+  --button: #167b9f;
 }
 .lime {
   --accent: #e6ee96;
+  --button: #a1ac29;
   --text: #585858;
 }
 .purple {
   --accent: #b095f6;
+  --button: #6b43d0;
   --text: #5e5084;
 }
 
 .orange {
   --accent: #ffb37e;
+  --button: #c17640;
   --text: #735139;
 }
 .gold {
   --accent: #ffcf7d;
+  --button: #d29c3d;
   --text: #695534;
 }
 @layer utilities {
   .button {
-    @apply w-5 aspect-square rounded-full;
+    @apply w-7 aspect-square rounded-full;
     background-color: var(--accent);
   }
   .note {
@@ -42,11 +48,19 @@
     background-color: var(--accent);
     color: var(--text);
   }
+  
   .note > textarea::placeholder {
     color: var(--text);
   }
   .note .delete {
     @apply shadow-lg;
     /* background-color: red; */
+  }
+  .note .warn{
+    --button:rgb(182, 81, 81);
+  }
+  .edit{
+    @apply text-white text-xl grid place-content-center w-12 aspect-square rounded-full hover:scale-110 transition-transform;
+    background-color: var(--button);
   }
 }
