--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,12 +5,6 @@
   -webkit-tap-highlight-color: transparent;
 }
 
-.main {
-  min-height: 100vh;
-  min-height: 100dvh;
-  display: grid;
-  grid-template-columns: auto 1fr;
-}
 
 .blue {
   --accent: #55cffa;
@@ -62,5 +56,9 @@
   .edit{
     @apply text-white text-xl grid place-content-center w-12 aspect-square rounded-full hover:scale-110 transition-transform;
     background-color: var(--button);
+  }
+  .divider{
+    @apply grid w-screen h-screen;
+    grid-template-columns: auto 1fr;
   }
 }
