create dashboard and notes page also modify editor page

--- a/src/app/prosemirror.css
+++ b/src/app/prosemirror.css
@@ -1,6 +1,6 @@
-.ProseMirror {
+/* .ProseMirror {
     @apply p-12 px-8 sm:px-12;
-  }
+  } */
   
   .ProseMirror .is-editor-empty:first-child::before {
     content: attr(data-placeholder);
